// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts Page searches blog correctly and clears search bar 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="search-filter-wrapper"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <form
            class="search-form"
          >
            <p
              class="search-form-input-wrapper"
            >
              <input
                class="input"
                data-testid="searchPost"
                name="searchPost"
                placeholder="Find a post"
                type="search"
                value=""
              />
            </p>
            <p
              class="control"
            >
              <button
                class="primary-button"
                data-testid="searchPostSubmit"
              >
                Search
              </button>
            </p>
          </form>
        </div>
        <div
          class="search-row-tags-wrapper"
        >
          <div
            class="tag-list-wrapper"
          >
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="all"
                id="all"
              >
                All
              </div>
              <span
                class="tag is-dark"
              >
                3
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="three"
                id="three"
              >
                three
              </div>
              <span
                class="tag-count-enabled"
              >
                3
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="two"
                id="two"
              >
                two
              </div>
              <span
                class="tag-count-enabled"
              >
                2
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="one"
                id="one"
              >
                one
              </div>
              <span
                class="tag-count-enabled"
              >
                1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <article
    class="section"
  >
    <section
      class="post-index-wrapper"
    >
      <div
        class="post-index-cards-wrapper"
      >
        <div
          class="post-index-card-wrapper"
          data-testid="post-card"
        >
          <div
            class="card"
          >
            <div
              class="card-image"
            >
              <a
                class="post-card-main-tag"
                href="?tag=two"
              >
                two
              </a>
              <figure
                class="post-card-image"
              >
                <img
                  alt="Placeholder image"
                  src="https://bulma.io/images/placeholders/1280x960.png"
                />
              </figure>
            </div>
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <p
                    class="title-four"
                  >
                    Baking Tutorial
                  </p>
                  <p
                    class="subtitle-six"
                  >
                    <time
                      datetime="3-2-2021"
                    >
                      3-2-2021
                    </time>
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <p>
                  a baking tutorial
                </p>
                <a
                  href="/blog/baking-tutorial/"
                >
                  Read more...
                </a>
              </div>
              <div
                class="card-footer"
              >
                <p
                  class="post-card-tag-title"
                >
                  Tags:
                </p>
                <div
                  class="tags"
                >
                  <a
                    class="post-card-tag"
                    href="?tag=three"
                    id="three"
                  >
                    three
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="post-index-card-wrapper"
          data-testid="post-card"
        >
          <div
            class="card"
          >
            <div
              class="card-image"
            >
              <a
                class="post-card-main-tag"
                href="?tag=one"
              >
                one
              </a>
              <figure
                class="post-card-image"
              >
                <img
                  alt="Placeholder image"
                  src="https://bulma.io/images/placeholders/1280x960.png"
                />
              </figure>
            </div>
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <p
                    class="title-four"
                  >
                    10 Best Things
                  </p>
                  <p
                    class="subtitle-six"
                  >
                    <time
                      datetime="2-2-2021"
                    >
                      2-2-2021
                    </time>
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <p>
                  a list of the ten best things
                </p>
                <a
                  href="/blog/ten-best-things/"
                >
                  Read more...
                </a>
              </div>
              <div
                class="card-footer"
              >
                <p
                  class="post-card-tag-title"
                >
                  Tags:
                </p>
                <div
                  class="tags"
                >
                  <a
                    class="post-card-tag"
                    href="?tag=two"
                    id="two"
                  >
                    two
                  </a>
                  <a
                    class="post-card-tag"
                    href="?tag=three"
                    id="three"
                  >
                    three
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="post-index-card-wrapper"
          data-testid="post-card"
        >
          <div
            class="card"
          >
            <div
              class="card-image"
            >
              <a
                class="post-card-main-tag"
                href="?tag=one"
              >
                one
              </a>
              <figure
                class="post-card-image"
              >
                <img
                  alt="Placeholder image"
                  src="https://bulma.io/images/placeholders/1280x960.png"
                />
              </figure>
            </div>
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <p
                    class="title-four"
                  >
                    Guide
                  </p>
                  <p
                    class="subtitle-six"
                  >
                    <time
                      datetime="5-2-2021"
                    >
                      5-2-2021
                    </time>
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <p>
                  a guide
                </p>
                <a
                  href="/blog/guide/"
                >
                  Read more...
                </a>
              </div>
              <div
                class="card-footer"
              >
                <p
                  class="post-card-tag-title"
                >
                  Tags:
                </p>
                <div
                  class="tags"
                >
                  <a
                    class="post-card-tag"
                    href="?tag=two"
                    id="two"
                  >
                    two
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </article>
</DocumentFragment>
`;

exports[`Posts Page searches glossary correctly 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="search-filter-wrapper"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <form
            class="search-form"
          >
            <p
              class="search-form-input-wrapper"
            >
              <input
                class="input"
                data-testid="searchPost"
                name="searchPost"
                placeholder="Find a post"
                type="search"
                value=""
              />
            </p>
            <p
              class="control"
            >
              <button
                class="primary-button"
                data-testid="searchPostSubmit"
              >
                Search
              </button>
            </p>
          </form>
        </div>
        <div
          class="search-row-tags-wrapper"
        >
          <div
            class="tag-list-wrapper"
          >
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="all"
                id="all"
              >
                All
              </div>
              <span
                class="tag is-dark"
              >
                5
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="three"
                id="three"
              >
                three
              </div>
              <span
                class="tag-count-enabled"
              >
                3
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="two"
                id="two"
              >
                two
              </div>
              <span
                class="tag-count-enabled"
              >
                4
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="one"
                id="one"
              >
                one
              </div>
              <span
                class="tag-count-enabled"
              >
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <article
    class="container"
  >
    <div
      class="is-centered"
    >
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="A"
        >
          A
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="air"
                        >
                          Air
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
                <a
                  class="definition-card-tag"
                  href="?tag=three"
                  id="three"
                >
                  three
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="atom"
                        >
                          Atom
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
                <a
                  class="definition-card-tag"
                  href="?tag=one"
                  id="one"
                >
                  one
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="C"
        >
          C
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="cloud"
                        >
                          Cloud
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
                <a
                  class="definition-card-tag"
                  href="?tag=one"
                  id="one"
                >
                  one
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="M"
        >
          M
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="moon"
                        >
                          Moon
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="W"
        >
          W
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="window"
                        >
                          Window
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test1"
                          >
                            /wiki/test1
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=three"
                  id="three"
                >
                  three
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Posts Page searches glossary html correctly 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="search-filter-wrapper"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <form
            class="search-form"
          >
            <p
              class="search-form-input-wrapper"
            >
              <input
                class="input"
                data-testid="searchPost"
                name="searchPost"
                placeholder="Find a post"
                type="search"
                value=""
              />
            </p>
            <p
              class="control"
            >
              <button
                class="primary-button"
                data-testid="searchPostSubmit"
              >
                Search
              </button>
            </p>
          </form>
        </div>
        <div
          class="search-row-tags-wrapper"
        >
          <div
            class="tag-list-wrapper"
          >
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="all"
                id="all"
              >
                All
              </div>
              <span
                class="tag is-dark"
              >
                5
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="three"
                id="three"
              >
                three
              </div>
              <span
                class="tag-count-enabled"
              >
                3
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="two"
                id="two"
              >
                two
              </div>
              <span
                class="tag-count-enabled"
              >
                4
              </span>
            </div>
            <div
              class="tag-wrapper"
            >
              <div
                class="tag-inactive"
                data-testid="one"
                id="one"
              >
                one
              </div>
              <span
                class="tag-count-enabled"
              >
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <article
    class="container"
  >
    <div
      class="is-centered"
    >
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="A"
        >
          A
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="air"
                        >
                          Air
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
                <a
                  class="definition-card-tag"
                  href="?tag=three"
                  id="three"
                >
                  three
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="atom"
                        >
                          Atom
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
                <a
                  class="definition-card-tag"
                  href="?tag=one"
                  id="one"
                >
                  one
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="C"
        >
          C
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="cloud"
                        >
                          Cloud
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
                <a
                  class="definition-card-tag"
                  href="?tag=one"
                  id="one"
                >
                  one
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="M"
        >
          M
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="moon"
                        >
                          Moon
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test"
                          >
                            /wiki/test
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="/blog/test1"
                          >
                            BlogPost
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="/wiki/test1"
                          >
                            WikiPost
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=two"
                  id="two"
                >
                  two
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="gloss-section-wrapper"
      >
        <h2
          class="title-two"
          id="W"
        >
          W
        </h2>
        <div
          data-testid="definition-card"
        >
          <div
            class="card mb-5"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-left"
                    >
                      <div
                        class="level-item"
                      >
                        <h3
                          class="title-three"
                          id="window"
                        >
                          Window
                        </h3>
                      </div>
                    </div>
                    <div
                      class="level-right"
                    >
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Syllables
                          </p>
                          <p
                            class="subheading"
                          >
                            a·ban·don
                          </p>
                        </div>
                      </div>
                      <div
                        class="centered-level"
                      >
                        <div>
                          <p
                            class="heading"
                          >
                            Phonetics
                          </p>
                          <p
                            class="subheading"
                          >
                            əˈbandən
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="container"
                >
                  <h3>
                    Definition
                  </h3>
                  <p>
                    Lemon drops pastry danish halvah. Lemon drops pastry danish halvah.
                  </p>
                </div>
              </div>
              <div
                class="content"
              >
                <div
                  class="level"
                >
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        Similar Words:
                      </h4>
                      <ol>
                        <li>
                          <a
                            class=""
                            href="#/blog/test"
                          >
                            /blog/test
                          </a>
                        </li>
                        <li>
                          <a
                            class=""
                            href="#/wiki/test1"
                          >
                            /wiki/test1
                          </a>
                        </li>
                      </ol>
                    </div>
                  </div>
                  <div
                    class="justified-left-level"
                  >
                    <div>
                      <h4>
                        RelatedPosts:
                      </h4>
                      <ol />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-footer"
            >
              <p
                class="definition-card-tag-title"
              >
                Tags:
              </p>
              <div
                class="tags"
              >
                <a
                  class="definition-card-tag"
                  href="?tag=three"
                  id="three"
                >
                  three
                </a>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;
